Avoid using deprecated Keycloak API